# molgenis-service-armadillo

./: .Rhistory  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  404.html  BRANCH_DIFF_MASTER.patch  BRANCH_REFACTOR_SUMMARY.md  BRANCH_REVIEW_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  FLOWER_DATA_LOADING.md  Jenkinsfile  LOGIN_BACKOFF_PLAN.md  README.md  SS7_SECURITY_CONTEXT_BLEED.md  application.template.yaml  application.template.yml  application.yaml  azure-pipelines.yml  build.gradle  changelog-notes.tpl  datashield_PATIENT.xlsx  docker-compose-ci.md  docker-compose-ci.yml  docker-compose-local-application.yml  docker-compose-local.md  docker-compose-local.yml  docker-compose.yml  gradle.properties  index.html  mkdocs.yml  patient.RData  pom.xml  pre-commit  renovate.json  settings.gradle  sitemap.xml  sonar-project.properties  websockets.R
.circleci/: config.yml
.circleci/workflows/: main.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml
.jenkins/: build-pod.yaml
.plan/plans/: resource-token.md
armadillo/: Dockerfile  README.md  build.gradle  docker-compose.yml  patient.parquet  pom.xml  test-actuator.http  test-exceptions.http  test-profiles.http  test-resources.http  test-tutorial.http  test-workspaces.http  test.http
armadillo/examples/: application-security-basic-auth.yml  application-security-oidc.yml
armadillo/http/: http-client.env.json  test-actuator.http  test-exceptions.http  test-profiles.http  test-resources.http  test-storage.http  test-tutorial.http  test-workspaces.http  test.http
ci/: ci.env  create_or_update_k8s-azure.sh  set_kubectl_config-azure.sh  set_test_environment.sh
ci/ci-build-images/: Dockerfile
containers/: build.gradle
datashield/: .env  docker-compose.yml  pom.xml  test-workspaces.http  test.http
deployment/ansible/: README.md  Vagrantfile  galaxy.yml  playbook.yml  requirements.yml
deployment/docker/: docker-compose.yml
doc/: _sidebar.md  index.html  migration-SOP-2-to-3.md  migration-guide-2-to-3.md  release-guide.md  release-test.md  ui.md
doc/adr/: 0001-use-adr-to-describe-architecture-decisions.md  (+8 more)
docker/: README.md  docker-compose-audit.yml  docker-compose.yml  filebeat.yml  logstash-armadillo.conf  rebuild.sh
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  developer_notes.md  faq.md  index.html  index.md  migration-guide-2-to-3.md  minor-release-update.md  release-test.md  ui.md  upgrade-2-3.md  upgrade-3-4.md
helm-chart/: Chart.yaml  values.yaml
r/: build.gradle  pom.xml
scripts/: Pipfile  README.md  application.yml.bak  armadillo-check-update.sh  armadillo-setup.sh  export-users.py  import-users.py  migrate-auth.py  migrate-containers-json.py  migrate-minio.py  release-test.R  requirements.txt  reset-localhost-projects.py
scripts/release/flower/quickstart-pytorch/: pyproject.toml  superexec.Dockerfile  supernode-app.Dockerfile
scripts/release/flower/quickstart-pytorch-data/: pyproject.toml  superexec.Dockerfile
scripts/release/flower/quickstart-pytorch-data/pytorchexample/: client_app.py  server_app.py  split_data.py  task.py
scripts/release/flower/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py
search/: search_index.json
ui/: .gitignore  README.md  build.gradle  index.html  jest.config.js  package-lock.json  package.json  pom.xml  shims-vue.d.ts  tsconfig.json  tsconfig.node.json  vite.config.js
v6-bridge/: .dockerignore  Dockerfile  SECURITY.md  requirements.txt
(+1334 files in other folders)
