[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchexample"
version = "1.0.0"
description = "Flower/PyTorch example using Armadillo push-data for data loading"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "molgenis-flwr-armadillo @ git+https://github.com/molgenis/molgenis-flwr-armadillo.git@feat/authentication",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-train = 0.5
local-epochs = 1
learning-rate = 0.01
project = "test-flower"

# Token and URL placeholders — injected by test script via --run-config
token-node1 = ""
token-node2 = ""
url-node1 = ""
url-node2 = ""

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
options.num-supernodes = 2
